# semiglobal-matching

./: CMakeLists.txt  Dockerfile  README.md  package.xml
include/sgm_gpu/: configuration.h  cost_aggregation.h  costs.h  hamming_cost.h  left_right_consistency.h  median_filter.h  sgm_gpu.h  sgm_gpu_node.h  util.h
launch/: semiglobal_launch.py  semiglobal_matching.launch
src/: costs.cu  hamming_cost.cu  left_right_consistency.cu  median_filter.cu  sgm_gpu.cu  sgm_gpu_node.cpp  sgm_gpu_node_main.cpp
test/: depth_image.py  image_publisher.py
