<package format="2">
  <name>semiglobal_matching</name>
  <version>0.0.1</version>
  <description>SGM package for ROS Noetic</description>
  <maintainer email="adithtom2004@gmail.com">Adith</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>message_filters</build_depend>


  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
